# global-components

./: Findglobal-components.cmake
components/SerialServer/: CMakeLists.txt
templates/: seL4VirtQueues-from.template.c
